--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,4 @@
-<section class=" ">
+<section class="">
   <nav
     x-data="{ 
     mobileMenuIsOpen: false,
@@ -186,25 +186,32 @@
       </div>
     </ul>
   </nav>
-    <div class="max-w-7xl mx-auto px-3 sm:px-6 lg:px-8 py-6 flex flex-col items-center justify-center text-center">
-        <h1 class="text-4xl sm:text-5xl font-bold text-on-surface-strong dark:text-on-surface-dark-strong">
-        Foodle
-        </h1>
-        <p class="text-lg sm:text-xl font-medium text-on-surface dark:text-on-surface-dark">
-        The best food delivery service in town
-        </p>
-        <div class="mt-6 flex gap-4">
-        <a
-            href="#"
-            class="whitespace-nowrap bg-transparent rounded-3xl border border-primary px-4 py-2 text-sm font-medium tracking-wide text-primary transition hover:opacity-75 text-center focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed dark:border-primary-dark dark:text-primary-dark dark:focus-visible:outline-primary"
-        >
-            Order Now
-        </a>
-        <a
-            href="#"
-            class="whitespace-nowrap bg-transparent rounded-3xl border border-danger px-4 py-2 text-sm font-medium tracking-wide text-danger transition hover:opacity-75 text-center focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-danger active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed dark:border-danger dark:text-danger dark:focus-visible:outline-danger"
-        >
-            Learn More
-        </a>
-        </div>
+  <div
+    class="max-w-7xl mx-auto px-3 sm:px-6 lg:px-8 py-6 flex flex-col items-center justify-center text-center"
+  >
+    <h1
+      class="text-4xl sm:text-5xl font-bold text-on-surface-strong dark:text-on-surface-dark-strong"
+    >
+      Foodle
+    </h1>
+    <p
+      class="text-lg sm:text-xl font-medium text-on-surface dark:text-on-surface-dark"
+    >
+      The best food delivery service in town
+    </p>
+    <div class="mt-6 flex gap-4">
+      <a
+        href="#"
+        class="whitespace-nowrap bg-transparent rounded-3xl border border-primary px-4 py-2 text-sm font-medium tracking-wide text-primary transition hover:opacity-75 text-center focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed dark:border-primary-dark dark:text-primary-dark dark:focus-visible:outline-primary"
+      >
+        Order Now
+      </a>
+      <a
+        href="#"
+        class="whitespace-nowrap bg-transparent rounded-3xl border border-danger px-4 py-2 text-sm font-medium tracking-wide text-danger transition hover:opacity-75 text-center focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-danger active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed dark:border-danger dark:text-danger dark:focus-visible:outline-danger"
+      >
+        Learn More
+      </a>
+    </div>
+  </div>
 </section>
